--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "react-dom": "16.13.1",
         "react-draggable": "4.4.3",
         "react-frame-component": "4.1.3",
+        "react-geocode": "^0.2.2",
         "react-google-maps": "^9.4.5",
         "react-i18next": "11.7.2",
         "react-masonry-css": "1.0.14",
