--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,9 @@
     },
     "rules": {
         "prettier/prettier": [
-            "error"
+            "error",{  
+                "endOfLine":"auto"
+            }
         ],
         "react/jsx-filename-extension": [
             "warn",
