--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "material-ui-popup-state": "1.6.1",
         "mobile-detect": "1.4.4",
         "moment": "2.27.0",
+        "moment-timezone": "^0.5.32",
         "notistack": "0.9.17",
         "path-to-regexp": "3.2.0",
         "perfect-scrollbar": "1.5.0",
@@ -59,6 +60,7 @@
         "react-google-maps": "^9.4.5",
         "react-i18next": "11.7.2",
         "react-masonry-css": "1.0.14",
+        "react-moment": "^1.1.1",
         "react-number-format": "4.4.1",
         "react-popper": "1.3.7",
         "react-redux": "7.2.1",
